rtest/tests/jsr335/Semantics/LambdaTypeAnalysis/AssignmentContext/ShouldFail/syntax17/Test.java
// .result=COMPILE_FAIL
import java.util.*;

public class Test {
	public interface TestInterface {
		 public String m(int a);
	}
	
	public static void main(String[] args) {
		TestInterface t = a -> {
			return a;
		};
    }
}
